--- a/09-ci-04-jenkins/pipeline/Jenkinsfile
+++ b/09-ci-04-jenkins/pipeline/Jenkinsfile
@@ -1,17 +1,42 @@
-node("linux"){
-    stage("Git checkout"){
-        git credentialsId: '5ac0095d-0185-431b-94da-09a0ad9b0e2c', url: 'git@github.com:aragastmatb/example-playbook.git'
+pipeline {
+  agent {
+    label 'linux'
+    docker {
+      alwaysPull true
+      image 'alainchiasson/docker-molecule'
+      args '--privileged -v /DATA/docker-cache:/docker-cache'
     }
-    stage("Sample define secret_check"){
-        secret_check=true
+  }
+  stages {
+    stage ("Docker install") {
+       steps {
+         sh 'sudo yum check-update'
+         sh 'curl -fsSL https://get.docker.com/ | sh'
+         sh 'sudo systemctl start docker'
+         sh 'sudo systemctl enable docker'
+         sh 'sudo systemctl status docker'
+         sh 'sudo usermod -aG docker $(whoami)'
+       }
     }
-    stage("Run playbook"){
-        if (secret_check){
-            sh 'ansible-playbook site.yml -i inventory/prod.yml'
-        }
-        else{
-            echo 'need more action'
-        }
-        
+    stage ("Display environment info") {
+      steps {
+        sh 'env'
+      }
     }
+    stage ("Display Molecule version") {
+      steps {
+        sh 'molecule --version'
+      }
+    }
+    stage ("Validate Docker."){
+      steps {
+        sh 'docker info'
+      }
+    }
+    stage ("Validate Tests Pass."){
+      steps {
+        sh 'cd simple && molecule test'
+      }
+    }
+  }
 }
